# build-your-own-embeddings

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_CARD.md  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  security.yml
benchmarks/: README.md  baseline_results.json
configs/: evaluate.yaml  from_scratch_tiny.yaml  hard_negative_mining.yaml  inference.yaml  train_cpu.yaml  train_distributed.yaml  train_gpu.yaml  train_tiny.yaml
constraints/: runtime.txt
data/: README.md  sample_documents.jsonl  sample_pairs.jsonl  sample_queries.jsonl  sample_retrieval.jsonl  sample_scored_pairs.jsonl  sample_triplets.jsonl
docker/: Dockerfile  Dockerfile.train  entrypoint.sh
docs/: architecture.md  contrastive_learning.md  embedding_fundamentals.md  evaluation.md  index.md  inference_and_serving.md  negative_sampling.md  observability.md  pooling.md  scaling.md  security.md  testing_strategy.md  tokenization.md  traceability.md  training.md  transformer_fundamentals.md  troubleshooting.md  vector_search.md
docs/adr/: 0001-pytorch-local-transformer.md  0002-mean-pooling.md  0003-contrastive-loss.md  0004-safe-artifacts.md  0005-faiss-fastapi.md  0006-no-raw-text-logging.md  0007-tiny-network-free-tests.md
scripts/: smoke_test.py
src/embedding_model/: __init__.py  cli.py  config.py  constants.py  exceptions.py  logging.py  tokenization.py
src/embedding_model/data/: __init__.py  preprocessing.py  readers.py  samplers.py  schemas.py
src/embedding_model/evaluation/: __init__.py  baselines.py  clustering.py  diagnostics.py  retrieval.py  similarity.py
src/embedding_model/export/: __init__.py  exporter.py  manifest.py
tests/: conftest.py
tests/end_to_end/: test_tiny_pipeline.py
tests/integration/: test_api_routes.py  test_cli.py  test_cli_lifecycle.py
tests/performance/: test_encoding_performance.py
tests/property/: test_vector_properties.py
tests/security/: test_api_security.py
tests/unit/: test_additional_branches.py  test_config_data_tokenizer.py  test_documentation.py  test_evaluation_logging_failures.py  test_evaluation_sampling.py  test_failure_contracts.py  test_inference_index_artifacts.py  test_modeling_losses.py
(+21 files in other folders)
