[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "build-your-own-embeddings"
version = "0.1.0"
description = "A network-free, end-to-end text embedding training and serving system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Build Your Own Embeddings contributors" }]
dependencies = [
  "faiss-cpu>=1.8,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "prometheus-client>=0.20,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  "safetensors>=0.4.5,<1",
  "scikit-learn>=1.4,<2",
  "torch>=2.2,<2.8",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8,<2"]
parquet = ["pyarrow>=16,<20"]
pretrained = ["transformers>=4.44,<5", "tokenizers>=0.19,<1"]
dev = [
  "build>=1.2,<2",
  "hypothesis>=6.100,<7",
  "mypy>=1.11,<2",
  "pandas-stubs>=2.2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
embedding-project = "embedding_model.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_model"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: computationally small isolated behavior",
  "integration: multiple project boundaries",
  "end_to_end: complete user workflow",
  "slow: long-running test",
  "gpu: requires CUDA",
  "network: requires network access",
  "performance: performance characterization",
  "security: security contract",
]

[tool.coverage.run]
branch = true
source = ["embedding_model"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["embedding_model"]
exclude = ["tests"]
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["faiss", "pandas", "pandas.*", "sklearn", "sklearn.*"]
ignore_missing_imports = true
